--- a/project.css
+++ b/project.css
@@ -8,14 +8,32 @@ body{
 
 h1{
     font-size: 5em ;
-    color: #dda15e;
+    color: #8b5e34;
+    align-items: center;
+    text-align: center;
+    text-decoration: underline;
 
     }
+
+p{
+    margin-left: 2em;
+}
 
 #main{
     margin:10px;
     padding: 5px;
 }
+
+.bilde{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    width: 400px; 
+    height: 700px;
+    justify-self: center;
+    margin-left: 34%; 
+}
+
 
 #linje{
     width: 98%;
@@ -23,7 +41,7 @@ h1{
     margin: 10px;
     background-color: #333; 
     margin-top: 6em;
-    margin-bottom: 6em;
+    margin-bottom: 2em;
 }
 
 
@@ -33,7 +51,7 @@ nav{
     left: 0;
     z-index: 1;
     width: 100vw;
-    background-color: #dda15e;
+    background-color: #e4cfbb;
     padding-left: 2em;
     font-family: 'Montserrat', sans-serif;
 
@@ -44,7 +62,7 @@ nav ul{
     align-items: center;
     list-style-type: none;
     gap: 2em;
-    padding: 0.5em;
+    padding: 0.7em;
     margin:0;
     overflow: hidden;
 
@@ -52,7 +70,7 @@ nav ul{
 nav ul a{
     color:black;
     text-decoration: none;
-    border: 1px solid #7f501a;
+    border: 1px solid #8b5e34;
     padding: 0.5em;
     max-width: 5em;
     width: 5em;
@@ -61,9 +79,11 @@ nav ul a{
 }
 
 nav ul a:hover{
-    background-color:#ddb281;
+    background-color:#EEE;
     font-weight: bold;
 }
+
+
 
 @media(orientation: landscape){
     .wrapper {
@@ -95,6 +115,9 @@ nav ul a:hover{
                  }
 }
                                       
+.wrapper{
+    margin-bottom: 7em;
+}
 
 text{
     padding: 10px;
@@ -102,17 +125,21 @@ text{
     border-radius: 10px;
 
 }
+h2{
+    text-decoration: underline;
+    color: #8b5e34;
+}
 
 img{
     max-width: 90%; 
     height: auto;
-    border-radius: 10px;
     max-height: 90%;
     
 }
+
 picture {
     border-radius: 10px;
-    background-color: rgb(186, 207, 226);
+    background-color: #ddb281;
     text-align: center;
     align-items: center;
     margin: auto;
@@ -146,4 +173,3 @@ footer{
     padding-bottom: 3em;
     padding-top: 3em;
 }
-
